# ut-ATL24-qtrees

./: .gitignore  CMakeLists.txt  Makefile  cross_val.0.txt  cross_val.1.txt  cross_val.2.txt  cross_val.3.txt  cross_val.4.txt  micro_scores_all.csv  micro_scores_all.txt  micro_scores_no_surface.csv  micro_scores_no_surface.txt  scores.txt
ATL24_qtrees/: blunder_detection.h  cmd_utils.h  confusion.h  dataframe.h  features.h  qtrees.h  utils.h  verify.h  xgboost.h
apps/: classify.cpp  classify_cmd.h  classify_inc.h  precompiled.h  qtrees.h  score.cpp  score_cmd.h  train.cpp  train_cmd.h
models/: model-20240910.json  model-20240916.json  model-20241004.json  model-20241023.json  model-20241024.json  model-20241105.json
plugin/: CMakeLists.txt  Makefile  QtreesClassifier.cpp  QtreesClassifier.h  qtrees.cpp
scripts/: generate_cross_val_commands.py  get_scores.sh  summarize_scores.bash  tune_hyperparams.py  view_predictions.py  yesno.bash
tests/: test_classify.cpp  test_utils.cpp  test_xgb1.cpp  test_xgb2.cpp
